--- a/SalesPromote/src/main/resources/templates/shop.html
+++ b/SalesPromote/src/main/resources/templates/shop.html
@@ -129,6 +129,14 @@
                     >颜色:</label
                   >
                   <div class="col-10">
+                    <select
+                      id="n-modal-inputColor"
+                      class="form-select col-10"
+                      name="color"
+                      onchange="modifyModalBtn($(this).val())"
+                    ></select>
+                  </div>
+                  <!-- <div class="col-10">
                     <input
                       type="text"
                       class="form-control required col-10"
@@ -136,7 +144,7 @@
                       name="color"
                       readonly
                     />
-                  </div>
+                  </div> -->
                 </div>
 
                 <div class="row">
