--- a/SalesPromote/src/main/resources/templates/user/album.html
+++ b/SalesPromote/src/main/resources/templates/user/album.html
@@ -442,6 +442,15 @@
           <li class="breadcrumb-item active" aria-current="page">图库</li>
         </ol>
       </nav>
+      <div class="form-group col-2 mt-4">
+        <label>款号</label>
+        <input
+          oninput="getAllItem()"
+          type="text"
+          id="n-itemName"
+          class="form-control"
+        />
+      </div>
       <!--图片集-->
       <div class="n-album" id="n-album"></div>
     </div>
