--- a/SalesPromote/src/main/resources/templates/user/folder.html
+++ b/SalesPromote/src/main/resources/templates/user/folder.html
@@ -466,6 +466,15 @@
           </li>
         </ol>
       </nav>
+      <div class="form-group col-2 mt-4">
+        <label>款号</label>
+        <input
+          oninput="getAllItem()"
+          type="text"
+          id="n-itemName"
+          class="form-control"
+        />
+      </div>
       <!--图片集-->
       <div class="n-album" id="n-album"></div>
     </div>
