--- a/SalesPromote/src/main/resources/templates/cart.html
+++ b/SalesPromote/src/main/resources/templates/cart.html
@@ -82,7 +82,7 @@
 
     <div class="n-content container">
       <!--图片集-->
-      <div class="container" style="overflow: scroll; height: 500px">
+      <div class="container" style="overflow: scroll; height: 70%">
         <!--表-->
         <table
           class="table table-hover n-table-libary mt-2"
