--- a/SalesPromote/src/main/resources/templates/order.html
+++ b/SalesPromote/src/main/resources/templates/order.html
@@ -283,7 +283,7 @@
 
     <div
       class="n-content container"
-      style="height: 600px; overflow-y: auto; overflow-x: hidden"
+      style="height: 80%; overflow-y: auto; overflow-x: hidden"
     >
       <!--订单集-->
       <div class="container">
