--- a/SalesPromote/src/main/resources/templates/shop.html
+++ b/SalesPromote/src/main/resources/templates/shop.html
@@ -272,7 +272,7 @@
       </div>
     </div>
 
-    <div class="n-content container" style="height: 600px; overflow-y: auto">
+    <div class="n-content container" style="height: 80%; overflow-y: auto">
       <!--图片集-->
       <div class="container">
         <div
