--- a/SalesPromote/src/main/resources/templates/user/send.html
+++ b/SalesPromote/src/main/resources/templates/user/send.html
@@ -103,7 +103,7 @@
             <th scope="col" class="text-secondary">地区</th>
           </tr>
         </thead>
-        <tbody id="n-tbody">
+        <tbody id="n-tbody" style="height: 60vh">
           <!-- 表内容将会自动insert在这 -->
         </tbody>
       </table>
