--- a/SalesPromote/src/main/resources/templates/user/libary.html
+++ b/SalesPromote/src/main/resources/templates/user/libary.html
@@ -280,7 +280,15 @@
           </button>
         </div>
       </div>
-
+      <div class="form-group col-2 mt-4">
+        <label>文件夹</label>
+        <input
+          oninput="getAllFolder()"
+          type="text"
+          id="n-forderName"
+          class="form-control"
+        />
+      </div>
       <!--表-->
       <table class="table table-hover n-table-libary">
         <caption style="text-align: right">
@@ -299,7 +307,7 @@
             <th scope="col" class="text-secondary">文件名</th>
           </tr>
         </thead>
-        <tbody id="n-tbody">
+        <tbody id="n-tbody" style="height: 50vh">
           <!-- 表内容将会自动insert在这 -->
         </tbody>
       </table>
