--- a/SalesPromote/src/main/resources/static/css/folder.css
+++ b/SalesPromote/src/main/resources/static/css/folder.css
@@ -138,4 +138,9 @@ body {
   min-height: 141px;
   overflow: hidden;
 }
+
+.detailPhotoframe {
+  height: 140px;
+  width: 141px;
+}
 /*# sourceMappingURL=folder.css.map */
