--- a/SalesPromote/src/main/resources/templates/user/libary.html
+++ b/SalesPromote/src/main/resources/templates/user/libary.html
@@ -280,7 +280,7 @@
           </button>
         </div>
       </div>
-      <div class="form-group col-2 mt-4">
+      <div class="form-group col-6 col-sm-2 mt-4">
         <label>文件夹</label>
         <input
           oninput="getAllFolder()"
