--- a/SalesPromote/src/main/resources/templates/user/send.html
+++ b/SalesPromote/src/main/resources/templates/user/send.html
@@ -81,7 +81,7 @@
     </header>
 
     <div class="n-content container">
-      <div class="form-group col-2 mt-4">
+      <div class="form-group col-6 col-sm-2 mt-4">
         <label>客户</label>
         <input
           oninput="getAllCustomer()"
