--- a/SalesPromote/src/main/resources/static/css/order.css
+++ b/SalesPromote/src/main/resources/static/css/order.css
@@ -6,7 +6,8 @@ body {
 .img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .form-control:disabled,
@@ -16,6 +17,8 @@ body {
 }
 
 .orderitem-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
