--- a/SalesPromote/src/main/resources/static/css/shop.css
+++ b/SalesPromote/src/main/resources/static/css/shop.css
@@ -16,15 +16,28 @@ body {
 .img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .card {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 200px 100px;
+  -ms-grid-rows: 200px 100px;
+      grid-template-rows: 200px 100px;
 }
 
 h5 {
   font-weight: 300;
+}
+
+.carousel-item {
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+}
+
+.carousel-item .img {
+  position: absolute;
 }
 /*# sourceMappingURL=shop.css.map */
