--- a/SalesPromote/src/main/resources/templates/user/customer.html
+++ b/SalesPromote/src/main/resources/templates/user/customer.html
@@ -465,7 +465,7 @@
               </button>
             </div>
           </div>
-          <div class="form-group col-2">
+          <div class="form-group col-6 col-sm-2">
             <label>客户</label>
             <input
               oninput="getAllCustomer()"
@@ -522,7 +522,7 @@
               </button>
             </div>
           </div>
-          <div class="form-group col-2">
+          <div class="form-group col-6 col-sm-2">
             <label>客户</label>
             <input
               oninput="getAllGroup()"
