Album,folder,chat:css vh ,mt

--- a/SalesPromote/src/main/resources/templates/user/chat.html
+++ b/SalesPromote/src/main/resources/templates/user/chat.html
@@ -215,7 +215,7 @@
       </div>
       <!--图片集-->
       <div
-        class="n-album"
+        class="n-album mt-2"
         id="n-album"
         style="height: 50vh; overflow-y: scroll; overflow-x: hidden"
       ></div>
