--- a/SalesPromote/src/main/resources/templates/user/album.html
+++ b/SalesPromote/src/main/resources/templates/user/album.html
@@ -630,7 +630,7 @@
         />
       </div>
       <!--图片集-->
-      <div class="n-album" id="n-album"></div>
+      <div class="n-album mt-2" id="n-album"></div>
     </div>
 
     <!-- 自定义js -->
